# psx-dungeon-crawler

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
cmake/: Dependencies.cmake
docs/: Doxyfile.in  mainpage.md
docs/superpowers/plans/: 2026-07-13-engine-scaffold.md  2026-07-14-debug-ui.md  2026-07-14-pixelation-outline.md
docs/superpowers/specs/: 2026-07-13-engine-scaffold-design.md  2026-07-14-debug-ui-design.md  2026-07-14-pixelation-outline-design.md
engine/assets/compositors/: psx.compositor
engine/assets/materials/: psx.material  sprite.material
engine/assets/programs/: imgui.program  psx.program  sprite.program
engine/assets/shaders/: bloom_blur.frag  bloom_bright.frag  bloom_composite.frag  debug_lines.frag  dither.frag  hardware_resolve.frag  imgui.frag  imgui.vert  particle.frag  particle.vert  pixel_stylize.frag  psx.frag  psx.vert  psx_lighting.glsl  quad.vert  sprite.frag  sprite.vert  wire.frag
engine/include/eng/: Action.h  ActionSet.h  Actions.h  Audio.h  AudioTypes.h  Component.h  Config.h  Content.h  DebugUi.h  DirectoryWatcher.h  Ease.h  EditorUi.h  Engine.h  Entity.h  Events.h  Factory.h  FileSystem.h  GameObject.h  GameSession.h  Handles.h  Input.h  LightDesc.h  LoadingScreen.h  Log.h  MaterialPreview.h  Math.h  Object.h  ParticleEffectDesc.h  Physics.h  Profiler.h  Renderer.h  Resource.h  ResourceCache.h  SceneView.h  SoundInstance.h  SoundResource.h  Space.h  Sprite.h  System.h  TextResource.h  (+1 more)
engine/include/eng/ecs/: Components.h  Scene.h  SceneBackend.h  SceneSync.h
engine/src/: Config.cpp  DebugUi.cpp  DebugUiImpl.h  EditorUi.cpp  Engine.cpp  Input.cpp  InputImpl.h  LoadingScreen.cpp  Log.cpp  MaterialPreview.cpp  ObjLoader.cpp  ObjLoader.h  Particles.cpp  Particles.h  Physics.cpp  PhysicsImpl.h  Platform.cpp  Platform.h  ProceduralMeshes.cpp  ProceduralMeshes.h  RenderCore.cpp  RenderCore.h  RenderPresets.cpp  RenderPresets.h  Renderer.cpp  SceneRegistry.cpp  SceneRegistry.h  UiContext.cpp  UiContext.h
engine/src/audio/: Audio.cpp  AudioInternal.h  SoundInstance.cpp  SoundResource.cpp
engine/src/content/: TextResource.cpp
engine/src/core/: Entity.cpp  GameSession.cpp  Object.cpp  Space.cpp
engine/src/diagnostics/: Profiler.cpp  Trace.cpp
engine/src/ecs/: RendererSceneBackend.cpp  RendererSceneBackend.h  Scene.cpp  SceneSync.cpp
engine/src/io/: DirectoryWatcher.cpp  FileSystem.cpp
engine/src/panels/: InspectorPanel.cpp  InspectorPanel.h  RenderTuningPanel.cpp  RenderTuningPanel.h  ScenePanel.cpp  ScenePanel.h  Selection.h
engine/src/systems/: Actions.cpp  Ease.cpp  Events.cpp  Factory.cpp
engine/tests/: ActionsTests.cpp  AudioTests.cpp  ContentTests.cpp  CoreObjectTests.cpp  DirectoryWatcherTests.cpp  EventsTests.cpp  FactoryTests.cpp  FileSystemTests.cpp  ObjGeometryTests.cpp  ProfilerTests.cpp  SceneRegistryTests.cpp  SceneSyncTests.cpp  SceneTests.cpp  TraceTests.cpp
game/assets/: dungeon.toml  dungeon_props.toml  editor.toml  editor_level.toml  game.toml  lobby.toml  lobby_dressing.toml  lobby_showcase.toml  palettes.toml  particles.toml
game/assets/materials/: demo.material  fantasy.material  game.material  prototype.material  spells.material
game/assets/particles/: spells.particle  torch.particle
game/assets/scenes/: demo_showcase.json  dungeon_seed_01.json  dungeon_seed_02.json  dungeon_seed_03.json  game_level_1.json  game_level_2.json  game_level_3.json  props_showcase.json
game/assets/textures/: ASSET_LIBRARY.md
game/src/: CombatConfig.cpp  CombatConfig.h  Dummy.cpp  Dummy.h  DungeonGen.cpp  DungeonGen.h  DungeonMap.cpp  DungeonMap.h  EditorCamera.cpp  EditorCamera.h  FpsController.cpp  FpsController.h  JsonSceneLoader.cpp  JsonSceneLoader.h  LevelDocument.cpp  LevelDocument.h  LevelEditor.cpp  LevelEditor.h  LevelResource.cpp  LevelResource.h  LobbyDressing.cpp  LobbyDressing.h  Melee.cpp  Melee.h  ParticleLibrary.cpp  ParticleLibrary.h  Projectiles.cpp  Projectiles.h  RenderPalette.cpp  RenderPalette.h  SceneFactory.cpp  SceneFactory.h  Spells.cpp  Spells.h  Targeting.cpp  Targeting.h  ViewModel.cpp  ViewModel.h  editor_main.cpp  main.cpp
game/tests/: DungeonLayoutTests.cpp  EditorCameraTests.cpp  FpsControllerTests.cpp  LevelDocumentTests.cpp  LevelResourceTests.cpp  LobbyDressingTests.cpp  PhysicsTests.cpp  RenderPaletteTests.cpp  TargetingTests.cpp
packaging/: install-desktop.sh  psx-dungeon.desktop
samples/common/: DemoScene.cpp  DemoScene.h
samples/common/assets/: demo_scene.toml
samples/psx-demo/assets/: demo.toml
samples/psx-demo/assets/materials/: demo.material  props.material
samples/psx-demo/assets/particles/: sparkle.particle
samples/psx-demo/src/: Animation.h  main.cpp
scripts/: install-deps.sh
tools/: fbx_to_obj.py  gltf_to_obj.py  simplify_flat_tiles.py  slice_tiles.py
